<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="2dp"
    android:visibility="visible">


    <TextView
        android:id="@+id/textView2"
        android:layout_width="236dp"
        android:layout_height="45dp"
        android:layout_row="0"
        android:layout_column="0"
        android:text="@string/odaberite_godinu"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:layout_row="1"
        android:layout_column="0"
        android:layout_below="@id/textView2"
        android:text="@string/odaberite_istrazivanje"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="236dp"
        android:layout_height="45dp"
        android:layout_row="2"
        android:layout_column="0"
        android:layout_below="@id/textView3"
        android:text="@string/odaberite_grupu"
        android:textSize="24sp" />

    <Spinner
        android:id="@+id/odabirGodina"
        android:layout_width="172dp"
        android:layout_height="45dp"
        android:layout_row="0"
        android:layout_column="1"
        android:layout_toRightOf="@id/textView2"
        android:visibility="visible"
        tools:visibility="visible" />

    <Spinner
        android:id="@+id/odabirIstrazivanja"
        android:layout_width="172dp"
        android:layout_height="45dp"
        android:layout_row="1"
        android:layout_column="1"
        android:layout_toRightOf="@id/textView3"
        android:layout_below="@id/odabirGodina"
        android:visibility="visible" />

    <Spinner
        android:id="@+id/odabirGrupa"
        android:layout_width="172dp"
        android:layout_height="45dp"
        android:layout_row="2"
        android:layout_column="1"
        android:layout_toRightOf="@id/textView4"
        android:layout_below="@id/odabirIstrazivanja"
        android:visibility="visible" />

    <Button
        android:id="@+id/dodajIstrazivanjeDugme"
        android:layout_width="172dp"
        android:layout_height="wrap_content"
        android:layout_row="3"
        android:layout_column="1"
        android:enabled="false"
        android:layout_toRightOf="@id/textView4"
        android:layout_below="@id/odabirGrupa"
        android:text="@string/upisi_me" />

</RelativeLayout>