<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/fragment_ankete"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <Spinner
                android:id="@+id/filterAnketa"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/listaAnketa"
                android:layout_width="match_parent"
                android:layout_height="565dp"
                android:layout_weight="1" />

        </LinearLayout>

    </RelativeLayout>
</FrameLayout>